--- a/scan_app/src/main/res/xml/prefs.xml
+++ b/scan_app/src/main/res/xml/prefs.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-   	<org.droidparts.preference.MultiSelectListPreference
+   	<android.preference.ListPreference
 	    android:key="select_templates"
-	    android:title="Templates to use" android:dialogTitle="Templates to use"
-	    android:summary="Specify types of form you would like to scan"
+	    android:title="@string/template_to_use" android:dialogTitle="@string/template_to_use"
+	    android:summary="@string/specify_form_type"
 	    android:entries="@array/select_templates_default_entries"
 	    android:entryValues="@array/select_templates_default_values" />
     <!--
