--- a/scan_app/src/main/res/values/arrays.xml
+++ b/scan_app/src/main/res/values/arrays.xml
@@ -6,4 +6,13 @@
 	<string-array name="select_templates_default_values">
 		<item>none</item>
 	</string-array>
+
+	<string-array name="directory_search_entries">
+		<item>Flat</item>
+		<item>Recursive</item>
+	</string-array>
+	<string-array name="directory_search_values">
+		<item>flat</item>
+		<item>recursive</item>
+	</string-array>
 </resources>
