--- a/scan_app/src/main/res/menu/scan_manager.xml
+++ b/scan_app/src/main/res/menu/scan_manager.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
+            android:id="@+id/menu_scan_preferences"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="@string/settings_button"
+            android:showAsAction="always" />
+    <item
             android:id="@+id/menu_scan_about"
             android:icon="@android:drawable/ic_menu_info_details"
             android:title="@string/about"
