--- a/scan_app/src/main/res/menu/display_processed_form_menu.xml
+++ b/scan_app/src/main/res/menu/display_processed_form_menu.xml
@@ -9,6 +9,12 @@
             android:id="@+id/scanNewForm"
             android:title="@string/scan_new_form"/>
     <item
+            android:id="@+id/processImage"
+            android:title="@string/process_image"/>
+    <item
+            android:id="@+id/processFolder"
+            android:title="@string/process_folder"/>
+    <item
             android:id="@+id/startOver"
             android:title="@string/main_menu"/>
 </menu>
