--- a/scan_app/src/main/res/menu/scan_manager.xml
+++ b/scan_app/src/main/res/menu/scan_manager.xml
@@ -2,13 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
             android:id="@+id/menu_scan_preferences"
-            android:icon="@android:drawable/ic_menu_preferences"
+            android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/settings"
             android:showAsAction="always" />
     <item
             android:id="@+id/menu_scan_instructions"
+            android:icon="@drawable/ic_help_black_24dp"
             android:title="@string/instructions"
-            android:showAsAction="never" />
+            android:showAsAction="always" />
     <item
             android:id="@+id/menu_scan_about"
             android:title="@string/about"
