--- a/scan_app/src/main/res/menu/scan_manager.xml
+++ b/scan_app/src/main/res/menu/scan_manager.xml
@@ -11,6 +11,12 @@
             android:title="@string/instructions"
             android:showAsAction="always" />
     <item
+            android:id="@+id/processImage"
+            android:title="@string/process_image"/>
+    <item
+            android:id="@+id/processFolder"
+            android:title="@string/process_folder"/>
+    <item
             android:id="@+id/menu_scan_about"
             android:title="@string/about"
             android:showAsAction="never" />
