Add version string to show which algorithm we have

--- a/scan_app/src/main/res/layout/main_menu.xml
+++ b/scan_app/src/main/res/layout/main_menu.xml
@@ -38,4 +38,16 @@
 
     </Button>
 
+    <TextView
+                android:id="@+id/version_display"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:gravity="center"
+                android:paddingBottom="1dp"
+                android:paddingTop="6dp"
+                android:text="version"
+                android:textSize="21dp"
+                android:textStyle="bold"/>
+
 </LinearLayout>
