--- a/scan_app/src/main/res/menu/scan_manager.xml
+++ b/scan_app/src/main/res/menu/scan_manager.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/menu_scan_preferences"
-            android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/settings"
-            android:showAsAction="always" />
+        android:id="@+id/menu_scan_preferences"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="@string/settings"
+        app:showAsAction="always" />
     <item
-            android:id="@+id/menu_scan_instructions"
-            android:icon="@drawable/ic_help_black_24dp"
-            android:title="@string/instructions"
-            android:showAsAction="always" />
+        android:id="@+id/menu_scan_instructions"
+        android:icon="@drawable/ic_help_black_24dp"
+        android:title="@string/instructions"
+        app:showAsAction="ifRoom" />
     <item
-            android:id="@+id/processImage"
-            android:title="@string/process_image"/>
+        android:id="@+id/processImage"
+        android:title="@string/process_image" />
     <item
-            android:id="@+id/processFolder"
-            android:title="@string/process_folder"/>
+        android:id="@+id/processFolder"
+        android:title="@string/process_folder" />
     <item
-            android:id="@+id/menu_scan_about"
-            android:title="@string/about"
-            android:showAsAction="never" />
+        android:id="@+id/menu_scan_about"
+        android:title="@string/about"
+        app:showAsAction="never" />
 </menu>
