--- a/scan_app/src/main/res/values/styles.xml
+++ b/scan_app/src/main/res/values/styles.xml
@@ -23,4 +23,12 @@
         <item name="android:layout_margin">3dp</item>
         <item name="android:gravity">center</item>
     </style>
+
+    <style name="Theme.AppCompat.Translucent" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+    </style>
 </resources>
